--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	<title>Title</title>
 	<style>
 		div{
+			width: 100%;
+			height: 100%;
 			font-size: 3em;
+			color: red;
+			margin: 100px auto;
 		}
 	</style>
 </head>
