--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 	<style>
+		html,body{
+			width: 100%;
+			height: 100%;
+		}
 		div{
 			width: 100%;
 			height: 100%;
