--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 	<style>
-		html,body{
-			width: 100%;
-			height: 100%;
-		}
 		div{
-			width: 100%;
-			height: 100%;
+			width: 800px;
+			height: 300px;
 			font-size: 3em;
 			color: red;
 			margin: 100px auto;
