--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 	</style>
 </head>
 <body>
-	<div>welcome to ytxhjjjx-lx's personal homepage!</div>
+	<div>welcome to lx's personal homepage!</div>
 </body>
 </html>
